<resources>
    <string name="app_name">Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="set_state">Set State</string>
    <string name="estimated_time_h">Estimated time, h</string>
    <string name="set_progress">Set progress:</string>
    <string name="start_task">START TASK</string>
    <string name="end_task">END TASK</string>
    <string name="save">SAVE</string>
    <string name="edit_task">EDIT TASK</string>
    <string name="delete">DELETE</string>
    <string name="there_is_no_any_record_here_n_add_a_new_one">There is no any record here.   Add a new one</string>
</resources>
