<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="java.lang.String" />

        <variable
            name="viewModel"
            type="com.matylionak.valery.task.DetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="left|start"
            android:orientation="vertical"
            android:padding="30dp">

            <LinearLayout
                android:id="@+id/level1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="@{viewModel.enabled}"
                    android:text="@={viewModel.name}"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"

                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/level2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@android:color/darker_gray" />



                    <EditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:minHeight="220dp"
                        android:layout_height="wrap_content"
                        android:enabled="@{viewModel.enabled}"
                        android:gravity="top"
                        android:text="@={viewModel.description}"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/level3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/set_state"
                    android:textColor="@android:color/darker_gray" />

                <Spinner

                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="@{viewModel.enabled}"
                    android:minWidth="150dp" />

            </LinearLayout>

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/estimated_time_h"
                    android:textColor="@android:color/darker_gray" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="@{viewModel.enabled}"
                    android:onClick="@{()->viewModel.minus()}"
                    android:text="-"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:text="@{String.valueOf(viewModel.estimatedTime)}"
                    android:textSize="18sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="@{viewModel.enabled}"
                    android:onClick="@{()->viewModel.plus()}"
                    android:text="+"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/level4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_progress"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.seekBarValue}"
                        android:textColor="@android:color/darker_gray" />
                </LinearLayout>

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="@{viewModel.enabled}"
                    android:max="100"
                    android:onProgressChanged="@{viewModel.onValueChanged}"
                    android:progress="@{viewModel.progress}" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/level5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start_task"
                    android:textColor="@android:color/darker_gray" />

                <Button
                    android:id="@+id/setStarTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="@{viewModel.enabled}"
                    android:onClick="@{()->viewModel.setStartTimeDialog()}"
                    android:text="@{viewModel.setStartTime}" />

                <Button
                    android:id="@+id/setStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="@{viewModel.enabled}"
                    android:onClick="@{()->viewModel.setStartDateDialog()}"
                    android:text="@{viewModel.setStartDate}" />

            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/level6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/tv5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/end_task"
                    android:textColor="@android:color/darker_gray" />

                <Button
                    android:id="@+id/setEndTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="@{viewModel.enabled}"
                    android:onClick="@{()->viewModel.setEndTimeDialog()}"
                    android:text="@{viewModel.setEndTime}" />

                <Button
                    android:id="@+id/setEndDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="@{viewModel.enabled}"
                    android:onClick="@{()->viewModel.setEndDateDialog()}"
                    android:text="@{viewModel.setEndDate}" />

            </LinearLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.enabled}"
                android:onClick="@{()->viewModel.save()}"
                android:text="@string/save" />

            <Button
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.enableEditAndDelet}"
                android:onClick="@{()->viewModel.edit()}"
                android:text="@string/edit_task" />

            <Button
                android:id="@+id/delet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.enableEditAndDelet}"
                android:onClick="@{()->viewModel.delete()}"
                android:text="@string/delete" />

        </LinearLayout>
    </ScrollView>
</layout>